export const snapshot = {};

snapshot[`styles: file structure 1`] = `
'<html>
    <head>
        <title>bar</title>
        <link rel="stylesheet" href="/css/page-foo.css" />
    </head>
    <body>
        <div id="page" class="_SWsgq_foo Swq73q_common">page</div>
        <div id="shared" class="-CnuFW_shared">shared</div>
        <div id="global" class="global">global</div>
    </body>
</html>'
`;

snapshot[`styles: file structure 2`] = `
'<html>
    <head>
        <title>bar</title>
        <link rel="stylesheet" href="/css/page-foo.css" />
    </head>
    <body>
        <div id="page" class="_SWsgq_foo Swq73q_common">page</div>
        <div id="shared" class="-CnuFW_shared">shared</div>
        <div id="global" class="global">global</div>
    </body>
</html>'
`;

snapshot[`styles: file structure 3`] = `
'<html>
    <head>
        <title>bar</title>
        <link rel="stylesheet" href="/css/page-bar.css" />
    </head>
    <body>
        <div id="page" class="tFrb0a_bar Swq73q_common">page</div>
        <div id="shared" class="-CnuFW_shared">shared</div>
        <div id="global" class="global">global</div>
    </body>
</html>'
`;

snapshot[`styles: file structure 4`] = `
'<html>
    <head>
        <title>bar</title>
        <link rel="stylesheet" href="/css/page-bar.css" />
    </head>
    <body>
        <div id="page" class="tFrb0a_bar Swq73q_common">page</div>
        <div id="shared" class="-CnuFW_shared">shared</div>
        <div id="global" class="global">global</div>
    </body>
</html>'
`;
